[gd_scene load_steps=28 format=2]

[ext_resource path="res://graphics/GRP/players/p3/alienPink_swim2.png" type="Texture" id=1]
[ext_resource path="res://graphics/GRP/players/p3/p3_duck.png" type="Texture" id=2]
[ext_resource path="res://graphics/GRP/players/p3/alienPink_swim1.png" type="Texture" id=3]
[ext_resource path="res://graphics/GRP/players/p3/alienPink_climb2.png" type="Texture" id=4]
[ext_resource path="res://graphics/GRP/players/p3/alienPink_climb1.png" type="Texture" id=5]
[ext_resource path="res://graphics/GRP/players/p3/p3_jump.png" type="Texture" id=6]
[ext_resource path="res://graphics/GRP/players/p3/p3_front.png" type="Texture" id=7]
[ext_resource path="res://graphics/GRP/players/p3/p3_walk03.png" type="Texture" id=8]
[ext_resource path="res://graphics/GRP/players/p3/p3_walk01.png" type="Texture" id=9]
[ext_resource path="res://graphics/GRP/players/p3/p3_walk02.png" type="Texture" id=10]
[ext_resource path="res://graphics/GRP/players/p3/p3_walk04.png" type="Texture" id=11]
[ext_resource path="res://graphics/GRP/players/p3/p3_walk05.png" type="Texture" id=12]
[ext_resource path="res://graphics/GRP/players/p3/p3_walk06.png" type="Texture" id=13]
[ext_resource path="res://graphics/GRP/players/p3/p3_walk09.png" type="Texture" id=14]
[ext_resource path="res://graphics/GRP/players/p3/p3_walk07.png" type="Texture" id=15]
[ext_resource path="res://graphics/GRP/players/p3/p3_walk08.png" type="Texture" id=16]
[ext_resource path="res://graphics/GRP/players/p3/p3_walk11.png" type="Texture" id=17]
[ext_resource path="res://graphics/GRP/players/p3/p3_walk10.png" type="Texture" id=18]
[ext_resource path="res://graphics/GRP/players/p3/alienPink_slide2.png" type="Texture" id=19]
[ext_resource path="res://graphics/GRP/players/p3/alienPink_slide1.png" type="Texture" id=20]
[ext_resource path="res://graphics/GRP/players/p3/p3_hurt.png" type="Texture" id=21]
[ext_resource path="res://graphics/GRP/players/p3/p3_stand.png" type="Texture" id=22]
[ext_resource path="res://Player.gd" type="Script" id=23]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=24]
[ext_resource path="res://graphics/GRP/Request pack/Tiles/raygunBig.png" type="Texture" id=25]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "climb",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "duck",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "front",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 19 ) ],
"loop": true,
"name": "slide",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "stand",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "swim",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 14 ), ExtResource( 18 ), ExtResource( 17 ) ],
"loop": true,
"name": "walk",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 33.1327, 45.9996 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource( 23 )
bullet_scene = ExtResource( 24 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "stand"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.667419, 1.00136e-05 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
position = Vector2( 0, 0.280613 )
current = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="RechargeTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Gun" type="Sprite" parent="."]
position = Vector2( 30, 11 )
texture = ExtResource( 25 )

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="RechargeTimer" to="." method="_on_RechargeTimer_timeout"]
